--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="#">EMPRESAS RECICLAJE</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon">
+
+          </span>
+          
+        </button>
+
+    
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
@@ -19,14 +26,14 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/private" routerLinkActive="active">Guía</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" routerLink="/mapagrupo" routerLinkActive="active">Mapa</a>
-        </li> -->
       </ul>
       <ul class="navbar-nav ml-auto">
         <ng-container *ngIf="!authService.loggedIn(); else loggedIn">
           <li class="nav-item">
             <a class="nav-link" routerLink="/signin" routerLinkActive="active">SignIn</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/signindos" routerLinkActive="active">AdminArea</a>
           </li>
           
         </ng-container>
@@ -34,15 +41,78 @@
           <li class="nav-item">
             <a class="nav-link" style="cursor: pointer;" (click)="authService.logout()">Logout</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/signup" routerLinkActive="active">SignUp</a>
-          </li>
         </ng-template>
+    
       </ul>
     </div>
+
+    
+
   </div>
+  
 </nav>
 
 <div class="container p-5">
   <router-outlet></router-outlet>
+</div> -->
+
+
+<div style="height: 80vh;">
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>Empresas</span>
+      <span class="menu-spacer"></span>
+      <div fxShow="true" fxHide.lt-md>
+        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+        <a mat-button href= "/tasks" routerLinkActive="active" >Inicio</a>
+        <a mat-button href="/consultas" routerLinkActive="active" >Consultas</a>
+        <a mat-button href="/private" routerLinkActive="active" >Guía</a>
+        <a mat-button href="/empresa" routerLinkActive="active">Empresa</a>
+        <a mat-button href="/signindos" routerLinkActive="active">AreaAdmin</a>
+        
+        <ng-container *ngIf="!authService.loggedIn(); else loggedIn1">
+          <a mat-button href="/signin" routerLinkActive="active">SignIn</a>
+          <!-- <a mat-button href="/signup" routerLinkActive="active">SignUp</a> -->
+        </ng-container>
+        <ng-template #loggedIn1>
+          <a mat-button (click)="authService.logout()">Logout</a>
+        </ng-template>
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
+  <mat-sidenav-container fxFlexFill>
+    <mat-sidenav #sidenav>
+      <mat-nav-list>
+        <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+        <a mat-list-item href="/tasks" routerLinkActive="active" >Inicio</a>
+        <a mat-list-item href="/consultas" routerLinkActive="active" >Consultas</a>
+        <a mat-list-item href="/private" routerLinkActive="active" >Guía</a>
+        <a mat-list-item href="/empresa" routerLinkActive="active">Empresa</a>
+        <a mat-button href="/signindos" routerLinkActive="active">AreaAdmin</a>
+
+        <ng-container *ngIf="!authService.loggedIn(); else loggedIn2">
+          <a mat-list-item href="/signin" routerLinkActive="active">SignIn</a>
+          <!-- <a mat-list-item href="/signup" routerLinkActive="active">SignUp</a> -->
+        </ng-container>
+        <ng-template #loggedIn2>
+              <a mat-list-item (click)="authService.logout()">Logout</a>
+        </ng-template>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content fxFlexFill>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
+
+
+
+
+
+
+
+
+
