--- a/src/app/components/empresa/empresa.component.css
+++ b/src/app/components/empresa/empresa.component.css
@@ -1,4 +1,4 @@
-.adm {
+/* .adm {
     position: relative;
     right: 200px;
 
@@ -9,6 +9,6 @@
     position: relative;
     right: 200px;
     top: 45px;
-}
+} */
 
 
